--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ text-align: left;
 	font-size: 36px;
 	font-family: 'Josefin Sans', sans-serif;
 }
+.baby{
+	display:block;
+	width: 50%;
+	height:400px;
+}
 .video{
 	padding:1 1 1 1;
 	display:inline-block;
