--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 ﻿
 body{
-	background: #F3FFBD;
+	background: #B2DBBF;
 }
 /*bloki*/
 #top{
@@ -8,7 +8,7 @@ display:block;
 width:100%;
 font-family: 'Josefin Sans', sans-serif;
 font-size: 80px;
-color: #d0e5d9;
+color: #70C1B3;
 text-align: center;
 line-height:150px;
 letter-spacing: 20px;
@@ -17,7 +17,7 @@ letter-spacing: 20px;
 width:100%;
 height:66px;
 font-family: 'Josefin Sans', sans-serif;
-color: #d0e5d9;
+color: #70C1B3;
 text-align: center;
 display:block;
 }
@@ -28,7 +28,7 @@ display: block;
   width: 90%;
   max-height:3000px;
 text-align: left;
-	color: #d0e5d9;
+	color: #70C1B3;
 	font-size: 36px;
 	font-family: 'Josefin Sans', sans-serif;
 }
