--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ button:focus {outline:0;}
 	float:left;
 	padding: 15 0 15 0;
     border: 0px;
-	color: #d0e5d9;
+	color: #70C1B3;
 	background-color: rgba(0,0,0,0);
     text-align: center;
     font-size: 36px;
