--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 ﻿
 body{
-	background: #B2DBBF;
+	background: #a9aca9;
 }
 /*bloki*/
 #top{
@@ -8,7 +8,7 @@ display:block;
 width:100%;
 font-family: 'Josefin Sans', sans-serif;
 font-size: 80px;
-color: #70C1B3;
+color: #60495a;
 text-align: center;
 line-height:150px;
 letter-spacing: 20px;
@@ -17,7 +17,7 @@ letter-spacing: 20px;
 width:100%;
 height:66px;
 font-family: 'Josefin Sans', sans-serif;
-color: #70C1B3;
+color: #60495a;
 text-align: center;
 display:block;
 }
@@ -28,7 +28,7 @@ display: block;
   width: 90%;
   max-height:3000px;
 text-align: left;
-	color: #70C1B3;
+	color: #60495a;
 	font-size: 36px;
 	font-family: 'Josefin Sans', sans-serif;
 }
@@ -61,7 +61,7 @@ button:focus {outline:0;}
 	float:left;
 	padding: 15 0 15 0;
     border: 0px;
-	color: #70C1B3;
+	color: #60495a;
 	background-color: rgba(0,0,0,0);
     text-align: center;
     font-size: 36px;
