--- a/style.css
+++ b/style.css
@@ -169,9 +169,13 @@ padding:0 0 0 0;
 
 table {
   border-collapse: collapse;
-  width: 60%;
   display:block;
   float:right;
+}
+table img{
+	width:250px;
+	height:250px;
+	
 }
 
 
