--- a/style.css
+++ b/style.css
@@ -32,6 +32,17 @@ text-align: left;
 	font-size: 36px;
 	font-family: 'Josefin Sans', sans-serif;
 }
+#right{
+display: block;
+width: 60%;
+float:right;
+}
+#left{
+display: block;
+width: 40%;
+float:left;
+}
+
 .baby{
 	display:block;
 	width: 50%;
