--- a/style.css
+++ b/style.css
@@ -45,8 +45,10 @@ float:left;
 
 .baby{
 	display:block;
-	width: 50%;
-	height:400px;
+	width: 70%;
+	height:600px;
+	margin-left: auto;
+	margin-right: auto;
 }
 .video{
 	padding:1 1 1 1;
