--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ display:block;
 width:100%;
 font-family: 'Josefin Sans', sans-serif;
 font-size: 80px;
-color: #604949;
+color: #5c5440;
 text-align: center;
 line-height:150px;
 letter-spacing: 20px;
@@ -17,7 +17,7 @@ letter-spacing: 20px;
 width:100%;
 height:66px;
 font-family: 'Josefin Sans', sans-serif;
-color: #604949;
+color: #5c5440;
 text-align: center;
 display:block;
 }
@@ -28,7 +28,7 @@ display: block;
   width: 90%;
   max-height:3000px;
 text-align: left;
-	color: #604949;
+	color: #5c5440;
 	font-size: 36px;
 	font-family: 'Josefin Sans', sans-serif;
 }
@@ -186,8 +186,8 @@ table {
   float:right;
 }
 table img{
-	width:250px;
-	height:250px;
+	width:33%;
+	height:33%;
 	
 }
 
