--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ button:focus {outline:0;}
 	float:left;
 	padding: 15 0 15 0;
     border: 0px;
-	color: #60495a;
+	color: #5c5440;
 	background-color: rgba(0,0,0,0);
     text-align: center;
     font-size: 36px;
@@ -83,15 +83,15 @@ button:focus {outline:0;}
     cursor: pointer;
 }
 a{text-decoration:none;
-color: #60495a;
+color: #5c5440;
   transition: 0.3s;}
 a:hover{text-decoration:none;
 color: white;
 }
 a:focus {text-decoration:none;
-color: #60495a;}
+color: #5c5440;}
 a:after {text-decoration:none;
-color: #60495a;}
+color: #5c5440;}
 .btn-group .button:hover{
   color: white;
   transition: 0.3s;
